# OpenEnvHackathon

./: .env.sample  .gitignore  Dockerfile  QUICKSTART.md  README.md  main.py  pyproject.toml
apex_env/: __init__.py  client.py  main.py  models.py  openenv.yaml
apex_env/data/banking/: scenarios.json
apex_env/data/consulting/: scenarios.json
apex_env/data/law/: scenarios.json
apex_env/server/: apex_environment.py  app.py  citation_reward.py  environment.py  llm_judge.py  models.py  scorer.py
scripts/: download_model.py
test/: test_environment.py
training/: baseline_eval.py  download_model.py  grpo_finetune.py  train_grpo.py
validation/: benchmark_eval.py  test_environment.py
