[project]
name = "apex-env"
version = "1.0.0"
description = "APEX Professional Tasks Environment for RL training"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # --- environment ---
    "openenv-core>=0.1.0",
    "fastapi>=0.115.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
    "taskipy>=1.14.0",

    # --- training stack (pinned for compatibility) ---
    "torch==2.10.0",
    "torchvision==0.25.0",          # must match torch 2.10.0
    "transformers==4.56.2",         # minimum required by trl 0.29.0, still <5
    "trl==0.29.0",
    "peft==0.15.0",
    "accelerate==1.6.0",
    "datasets==3.6.0",

    # vLLM installed manually after uv sync to avoid conflicts:
    # .venv/bin/pip install vllm==0.12.0
]

[tool.taskipy.tasks]
serve = "python main.py"
test = "python -m pytest test/ -v"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }